@@ -7,7 +7,5 @@ bin_SCRIPTS = gnome-sudoku
 CLEANFILES  = gnome-sudoku gnome-sudoku.in
 
 gnome-sudoku: gnome-sudoku.in
-	sed \
-		-e "s|\#pyexecdir\#|$(pyexecdir)|" \
-	    	$< > $@
+	cp gnome-sudoku.in $@
 	if test -f $@; then chmod u+x $@; fi
